kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 8080 # Service port
    targetPort: 8080 # Pod port
  type: ClusterIP
